# flow

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SYSTEM_PROMPT.md  docker-compose.yml  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
cache/: patterns.json
cmd/server/: main.go
configs/: config.example.yaml
db/migrations/: 001_init_schema.sql  001_init_schema_simple.sql  002_add_email_schema.sql  002_hypothesis_schema.sql
docs/: SYNTAX.md
examples/: conditions.flow  fibonacci.flow  fizzbuzz.flow  greeting.flow  hello  hello.flow  loop.flow  loops.flow  math.flow  variables.flow
frontend/: nginx.conf  package.json  svelte.config.js  vite.config.js
frontend/investigation/: index.html
frontend/src/: app.css  app.html
internal/api/: routes_chat.go  routes_conversation.go  routes_fast_extract.go  routes_graph.go  routes_health.go  routes_pipeline.go  server.go  websocket_handler.go
internal/cli/: cli.go
internal/codegen/: codegen.go
internal/compiler/: compiler.go
internal/config/: config.go
internal/database/: graph.go  postgres.go  repository.go
internal/lexer/: lexer.go
internal/middleware/: cors.go  logger.go  recovery.go
internal/models/: conversation.go  message.go  (+1 more)
native/cpp/: CMakeLists.txt
native/cpp/include/: ffi_bridge.hpp  memory_pool.hpp  pattern_ffi.hpp  pattern_matcher.hpp  synapse.hpp  tensor.hpp
native/cpp/src/: ffi_bridge.cpp  memory_pool.cpp  pattern_ffi.cpp  pattern_matcher.cpp  synapse.cpp  tensor.cpp
native/rust/: Cargo.toml
native/rust/src/: chunker.rs  classifier.rs  ffi.rs  lib.rs  parser.rs  tokenizer.rs
scripts/: build.sh  dev.sh  docker-build.sh  install.sh  migrate.sh  start.sh  test.sh
(+81 files in other folders)
